[gd_scene load_steps=23 format=3 uid="uid://xi8i6br8rjrn"]

[ext_resource type="PackedScene" uid="uid://cxqcy11rdvcyt" path="res://Scenes/Enemies/EnemyBase/EnemyBase.tscn" id="1_80t18"]
[ext_resource type="Script" uid="uid://bwle6eopdf4vh" path="res://Scenes/Enemies/Saucer/Saucer.gd" id="2_ya21d"]
[ext_resource type="Texture2D" uid="uid://dhl1td3t4abyg" path="res://assets/ships/saucer_1.png" id="3_hw2hu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hw2hu"]
radius = 28.0179

[sub_resource type="Animation" id="Animation_o4f6x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_55bvn"]
resource_name = "close"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 2, 1, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"set_process"
}]
}

[sub_resource type="Animation" id="Animation_yoewj"]
resource_name = "flash"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_vf5ye"]
resource_name = "open"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [false],
"method": &"set_process"
}, {
"args": [],
"method": &"play_doors_openning_sound"
}, {
"args": [],
"method": &"_shoot"
}]
}

[sub_resource type="Animation" id="Animation_hw2hu"]
resource_name = "spin"
length = 1.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.26573]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vf5ye"]
_data = {
&"RESET": SubResource("Animation_o4f6x"),
&"close": SubResource("Animation_55bvn"),
&"flash": SubResource("Animation_yoewj"),
&"open": SubResource("Animation_vf5ye"),
&"spin": SubResource("Animation_hw2hu")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hw2hu"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yoewj"]
animation = &"close"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_55bvn"]
animation = &"flash"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o4f6x"]
animation = &"open"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vf5ye"]
animation = &"spin"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yoewj"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_55bvn"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_md11c"]
advance_mode = 2
advance_expression = "_take_shot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eemv8"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_emona"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tbr4m"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_hw2hu"]
states/RESET/node = SubResource("AnimationNodeAnimation_hw2hu")
states/RESET/position = Vector2(334, 98.375)
states/close/node = SubResource("AnimationNodeAnimation_yoewj")
states/close/position = Vector2(471.7, 207.751)
states/flash/node = SubResource("AnimationNodeAnimation_55bvn")
states/flash/position = Vector2(629, 206.072)
states/open/node = SubResource("AnimationNodeAnimation_o4f6x")
states/open/position = Vector2(627.5, 96.0062)
states/spin/node = SubResource("AnimationNodeAnimation_vf5ye")
states/spin/position = Vector2(472.5, 99.1875)
transitions = ["Start", "RESET", SubResource("AnimationNodeStateMachineTransition_yoewj"), "RESET", "spin", SubResource("AnimationNodeStateMachineTransition_55bvn"), "spin", "open", SubResource("AnimationNodeStateMachineTransition_md11c"), "open", "flash", SubResource("AnimationNodeStateMachineTransition_eemv8"), "flash", "close", SubResource("AnimationNodeStateMachineTransition_emona"), "close", "spin", SubResource("AnimationNodeStateMachineTransition_tbr4m")]
graph_offset = Vector2(-87.6001, -12.57)

[node name="Saucer" instance=ExtResource("1_80t18")]
script = ExtResource("2_ya21d")
_crash_damage = 20
_points = 20

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." index="2"]

[node name="Sprite2D" type="Sprite2D" parent="." index="3"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_hw2hu")
offset = Vector2(0, 3)
hframes = 7

[node name="Marker2D" type="Marker2D" parent="Booms" index="0"]
position = Vector2(-17, 3)

[node name="Marker2D_2" type="Marker2D" parent="Booms" index="1"]
position = Vector2(10, -7)

[node name="Marker2D_3" type="Marker2D" parent="Booms" index="2"]
position = Vector2(5, 11)

[node name="Marker2D_4" type="Marker2D" parent="Booms" index="3"]
position = Vector2(-3, 3)

[node name="Marker2D_5" type="Marker2D" parent="Booms" index="4"]
position = Vector2(-5, -11)

[node name="Marker2D_6" type="Marker2D" parent="Booms" index="5"]
position = Vector2(-9, 11)

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("CircleShape2D_hw2hu")

[node name="HealthBar" parent="." index="6"]
offset_top = -30.0
offset_bottom = -27.0

[node name="ShootTimer" type="Timer" parent="." index="7"]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="8"]
root_node = NodePath("../Sprite2D")
libraries = {
&"": SubResource("AnimationLibrary_vf5ye")
}

[node name="AnimationTree" type="AnimationTree" parent="." index="9"]
root_node = NodePath("../Sprite2D")
tree_root = SubResource("AnimationNodeStateMachine_hw2hu")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
